--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            padding: 20px;
+            padding: 0;
             background-image: url(fundo.png);
             background-repeat: no-repeat;
             background-size: cover;
@@ -16,8 +16,19 @@
             min-height: 100vh;
             margin: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
+        }
+
+        header {
+            text-align: center;
+            padding: 20px;
+        }
+
+        .logo {
+            width: 150px;
+            margin-bottom: 20px;
+            filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
         }
 
         .card {
@@ -28,6 +39,7 @@
             width: 100%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             position: relative;
+            margin-bottom: 40px;
         }
 
         h2 {
@@ -91,6 +103,9 @@
 </head>
 
 <body>
+    <header>
+        <img src="proz-logo_branca.png" alt="Logo da Proz" class="logo">
+    </header>
     <div class="card">
         <h2 id="question">Carregando pergunta...</h2>
         <div class="options" id="options"></div>
