--- a/index.html
+++ b/index.html
@@ -20,15 +20,31 @@
             align-items: center;
         }
 
-        .card {
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            align-items: flex-start;
+            max-width: 1200px;
+        }
+
+        .card,
+        .image-box {
             background: white;
             padding: 20px;
             border-radius: 10px;
-            max-width: 600px;
-            width: 100%;
+            flex: 1 1 300px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            position: relative;
             text-align: center;
+        }
+
+        .card img,
+        .image-box img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            object-fit: cover;
         }
 
         h2 {
@@ -53,27 +69,52 @@
         .logo {
             width: 120px;
             margin-bottom: 20px;
+            filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        /* Responsividade extra */
+        @media (max-width: 700px) {
+            .container {
+                flex-direction: column;
+                align-items: stretch;
+            }
         }
     </style>
 </head>
 
 <body>
-    <div class="card">
-        <img src="proz-logo.png" alt="Logo da Proz" class="logo">
-        <h2>Regras do Jogo</h2>
-        <p>
-            Cada equipe possui <strong>2 jogadores</strong>. A cada rodada, uma equipe joga o dado e avança nas casas do tabuleiro.
-        </p>
-        <p>
-            Se a equipe cair em uma casa marcada, deverá responder a uma pergunta do quiz. Se <strong>acertar</strong>, continua normalmente. Se <strong>errar</strong>, deverá <strong>pagar uma prenda</strong>!
-        </p>
-        <p>
-            A equipe pode <strong>optar por não pagar a prenda</strong>, mas nesse caso deverá <strong>voltar ao início do jogo</strong>.
-        </p>
-        <p>
-            Vence a equipe que <strong>chegar primeiro ao final</strong> do percurso!
-        </p>
-        <button class="btn" onclick="window.location.href='quiz.html'">Começar o Jogo</button>
+    <div class="container">
+        <div class="card">
+            <header>
+                <img src="proz-logo.png" alt="Logo da Proz" class="logo">
+            </header>
+            <h2>Regras do Jogo</h2>
+            <p>
+                Cada equipe possui <strong>2 jogadores</strong>. A cada rodada, uma equipe joga o dado e avança nas
+                casas do tabuleiro.
+            </p>
+            <p>
+                Se a equipe cair em uma casa marcada, deverá responder a uma pergunta do quiz. Se
+                <strong>acertar</strong>, continua normalmente. Se <strong>errar</strong>, deverá <strong>pagar uma
+                    prenda</strong>!
+            </p>
+            <p>
+                A equipe pode <strong>optar por não pagar a prenda</strong>, mas nesse caso deverá <strong>voltar ao
+                    início do jogo</strong>.
+            </p>
+            <p>
+                Vence a equipe que <strong>chegar primeiro ao final</strong> do percurso!
+            </p>
+            <button class="btn" onclick="window.location.href='quiz.html'">Começar o Jogo</button>
+        </div>
+        <div class="image-box">
+            <img src="jogo_tabuleiro.png" alt="Imagem decorativa do jogo">
+        </div>
     </div>
 </body>
 
