--- a/quiz.html
+++ b/quiz.html
@@ -36,7 +36,7 @@
             padding: 20px;
             border-radius: 10px;
             max-width: 600px;
-            width: 100%;
+            width: 80%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             position: relative;
             margin-bottom: 40px;
@@ -124,7 +124,7 @@
         <h2>
             <span id="question">Carregando pergunta...</span>
             <span id="dice" title="Clique para lançar o dado" onclick="rollDice()"
-                style="cursor: pointer; margin-left: 10px;">clique aqui → 🎲</span>
+                style="cursor: pointer; margin-left: 10px;">🎲</span>
             <span id="dice-result" style="margin-left: 10px; font-size: 16px; color: #4caf50;"></span>
         </h2>
         <div class="options" id="options"></div>
