--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             border-radius: 10px;
             object-fit: cover;
         }
+    
 
         h2 {
             font-size: 20px;
@@ -76,6 +77,10 @@
             text-align: center;
             margin-bottom: 20px;
         }
+        .card header img {
+    height: 36px; /* ou qualquer altura que desejar */
+    width: auto;  /* mantém a proporção da imagem */
+}
 
         /* Responsividade extra */
         @media (max-width: 700px) {
