--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,7 @@
     body {
       font-family: Arial, sans-serif;
       padding: 0;
-      background-color: #f5f5f5;
+      background-image: url(fundo.png);
       min-height: 100vh;
       margin: 0;
       display: flex;
