--- a/quiz.html
+++ b/quiz.html
@@ -10,6 +10,9 @@
       font-family: Arial, sans-serif;
       padding: 0;
       background-image: url(fundo.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
       min-height: 100vh;
       margin: 0;
       display: flex;
