--- a/quiz.html
+++ b/quiz.html
@@ -132,10 +132,12 @@
   <script>
     const micos = [
       "Imite um animal por 10 segundos.",
-      "Fale como um robô até a próxima pergunta.",
+      "Ande pela sala equilibrnado um caderno na cabeça..",
       "Dance como se ninguém estivesse olhando.",
-      "Fale uma frase famosa com sotaque diferente.",
-      "Desfile como se estivesse em uma passarela."  
+      "Ande de costas pela sala de aula.",
+      "Desfile como se estivesse em uma passarela.",
+      "Pule com um pé só.",
+      "Abrace alguém aleatorio na sala de aula."  
     ];
 
     const quiz = [
