--- a/quiz.html
+++ b/quiz.html
@@ -636,21 +636,56 @@
         ];
 
         const micos = [
-            "Conte uma piada ruim.",
-            "Imite um animal de sua escolha.",
-            "Cante um trecho de uma música desafinadamente.",
-            "Dance por 10 segundos com um estilo engraçado.",
-            "Faça uma pose de super-herói ridícula.",
-            "Tente falar sem usar a letra 'A' por 15 segundos.",
-            "Descreva seu café da manhã de hoje com mímica.",
-            "Faça 5 polichinelos enquanto canta o alfabeto.",
-            "Responda à próxima pergunta usando uma voz engraçada.",
-            "Elogie a equipe adversária de uma forma criativa (e sincera!).",
-            "Mande um beijo para a câmera/público de forma exagerada.",
-            "Invente um aperto de mão secreto com um colega.",
-            "Finja que está tocando um instrumento musical por 10 segundos.",
-            "Ande em linha reta como um robô.",
-            "Faça uma cara engraçada e mantenha por 5 segundos."
+            "Imitar um gato por 30 segundos, miando e se limpando com as 'patas'.",
+            "Cante 'Parabéns pra Você' em tom de ópera, com muita dramaticidade.",
+            "Dance como um robô por 15 segundos.",
+            "Declare seu amor de forma poética para uma cadeira.",
+            "Dê uma volta ao redor da sala andando como um pinguim.",
+            "Narre a ação mais próxima como se fosse um gol em uma final de campeonato.",
+            "Fale com um sotaque caipira até a sua próxima rodada.",
+            "Invente um nome e um poder de super-herói para si mesmo e faça uma pose.",
+            "Conte uma piada muito sem graça e tente não rir.",
+            "Atue em um comercial de 30 segundos para um produto imaginário.",
+            "Fique imóvel como uma estátua por 1 minuto.",
+            "Dê um conselho para a equipe adversária falando como o Mestre Yoda.",
+            "Tente dar 5 passos de balé de forma graciosa.",
+            "Faça um solo de guitarra invisível por 20 segundos.",
+            "Dê uma notícia inventada com uma expressão facial muito séria.",
+            "Crie um rap de quatro versos sobre o jogo.",
+            "Atravesse a sala em câmera lenta, exagerando os movimentos.",
+            "Imite 3 animais diferentes em 10 segundos.",
+            "Suba em uma cadeira e grite 'Eu sou o rei/a rainha do mundo!'.",
+            "Crie um poema de duas linhas sobre a pessoa à sua direita.",
+            "Tente fazer sua mão 'falar' como um boneco de ventríloquo.",
+            "Cante o Hino Nacional batendo palmas no ritmo da Macarena.",
+            "Crie uma coreografia de 5 segundos e ensine para o seu time.",
+            "Aja como um paparazzi e tire fotos imaginárias de alguém.",
+            "Imite 3 emojis diferentes usando apenas o seu rosto.",
+            "Reja uma orquestra invisível que está tocando uma música dramática.",
+            "Finja ler a mente de alguém e diga um pensamento engraçado.",
+            "Desfile pela sala como se estivesse em uma passarela de moda.",
+            "Faça um discurso agradecendo por um prêmio inventado.",
+            "Faça uma luta de Kung Fu em câmera lenta com um oponente imaginário.",
+            "Tente 'vender' uma caneta com muita empolgação.",
+            "Dê sua melhor risada de vilão de filme.",
+            "Faça a mímica de 3 profissões diferentes em 15 segundos.",
+            "Tenha uma conversa séria com a sua própria mão por 30 segundos.",
+            "Use suas meias como luvas até a próxima rodada.",
+            "Faça um elogio criativo para cada membro da equipe adversária.",
+            "Tente pegar um objeto pequeno agindo como um Tiranossauro Rex.",
+            "Soletre o seu nome completo de trás para frente.",
+            "Dê uma explicação 'científica' e inventada sobre por que o céu é azul.",
+            "Traduza o que a próxima pessoa falar para uma língua inventada.",
+            "Inicie um abraço em grupo com a sua própria equipe.",
+            "Apresente a pessoa à sua esquerda como se ela fosse uma celebridade.",
+            "A cada vez que alguém falar seu nome, faça um som de notificação.",
+            "Crie uma teoria da conspiração boba sobre por que os chinelos somem.",
+            "Mande um 'coração de dorama' para a equipe adversária.",
+            "Tente fazer um truque de mágica que obviamente vai dar errado.",
+            "Seja a 'sombra' de alguém por 1 minuto, imitando seus movimentos.",
+            "Narre os passos para fazer um miojo como se fosse um chef renomado.",
+            "Finja que está pescando um peixe enorme no meio da sala.",
+            "Anuncie o próximo jogador como se fosse uma chamada de embarque.".
         ];
 
 
