--- a/old/index.html
+++ b/old/index.html
@@ -7,13 +7,6 @@
     <link rel="shortcut icon" href="icon.png">
     <title>Quiz de Testes de Software</title>
     <style>
-        :root {
-            --senai-red: #C8102E;
-            --senai-red-dark: #a50e24;
-            --senai-green: #2e7d32;
-            --neutral-bg: #f0f0f0;
-        }
-        * { box-sizing: border-box; }
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
@@ -35,8 +28,6 @@
             justify-content: center;
             align-items: flex-start;
             max-width: 1200px;
-            width: 100%;
-            padding: 10px;
         }
 
         .card,
@@ -44,8 +35,8 @@
             display: flex;
             flex-direction: column;
             background: white;
-            padding: clamp(16px, 2.5vw, 24px);
-            min-height: 320px;
+            padding: 20px;
+            height: 70vh;
             border-radius: 10px;
             flex: 1 1 300px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -63,26 +54,22 @@
     
 
         h2 {
-            font-size: clamp(18px, 2.8vw, 24px);
-            margin: 0 0 10px 0;
+            font-size: 20px;
         }
 
         .btn {
             margin-top: 20px;
-            padding: clamp(10px, 2.5vw, 14px) clamp(16px, 3vw, 22px);
-            font-size: clamp(16px, 2.8vw, 18px);
-            background-color: var(--senai-red);
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #4caf50;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            width: 100%;
-            max-width: 360px;
-            align-self: center;
         }
 
         .btn:hover {
-            background-color: var(--senai-red-dark);
+            background-color: #45a049;
         }
 
         .logo {
@@ -96,34 +83,16 @@
             margin-bottom: 20px;
         }
         .card header img {
-            height: 37px; /* ou qualquer altura que desejar */
-            width: auto;  /* mantém a proporção da imagem */
-        }
+    height: 37px; /* ou qualquer altura que desejar */
+    width: auto;  /* mantém a proporção da imagem */
+}
 
-        /* Responsividade */
-        @media (max-width: 900px) {
+        /* Responsividade extra */
+        @media (max-width: 700px) {
             .container {
                 flex-direction: column;
                 align-items: stretch;
             }
-            .card, .image-box {
-                height: auto;
-            }
-            .image-box { order: -1; }
-            .card { order: 1; }
-        }
-
-        @media (max-width: 600px) {
-            body { padding: 10px; align-items: flex-start; }
-            .container { gap: 12px; }
-            .card, .image-box { padding: 16px; }
-            .card { justify-content: flex-start; gap: 12px; }
-            .card, .image-box { min-height: unset; }
-            .image-box { order: -1; }
-            .card { order: 1; }
-            .btn { position: sticky; bottom: 0; z-index: 2; }
-            .logo { width: 96px; }
-            .image-box img { max-height: 40vh; }
         }
     </style>
 </head>
