--- a/quiz2.html
+++ b/quiz2.html
@@ -188,14 +188,14 @@
                 answer: 2
             },
             {
-                q: "Quais são três benefícios da virtualização para empresas?",
+                q: "Qual é a finalidade do Estudo de Viabilidade no SDLC?",
                 options: [
-                    "Menor segurança, maior consumo de energia, menos flexibilidade.",
-                    "Custo elevado, menor escalabilidade, alta complexidade.",
-                    "Melhor uso de recursos, economia de custos, maior flexibilidade.",
-                    "Dependência de hardware, aumento de falhas, menor desempenho."
+                    "Analisar viabilidade técnica, econômica e operacional do projeto.",
+                    "Definir layout visual de telas.",
+                    "Executar testes unitários dos componentes.",
+                    "Publicar o sistema em produção."
                 ],
-                answer: 2
+                answer: 0
             },
             {
                 q: "Qual a principal diferença entre Teste Funcional e Estrutural?",
@@ -358,12 +358,12 @@
                 answer: 0
             },
             {
-                q: "O que são ferramentas de controle de versão?",
+                q: "Qual é o papel das ferramentas de controle de versão no SDLC?",
                 options: [
-                    "Softwares que ajudam a gerenciar mudanças no código-fonte.",
-                    "Ferramentas para editar texto.",
-                    "Programas para design gráfico.",
-                    "Plataformas de redes sociais."
+                    "Rastrear mudanças e permitir colaboração segura no código ao longo das fases.",
+                    "Criar diagramas de arquitetura.",
+                    "Prototipar interfaces de usuário.",
+                    "Gerenciar orçamento e cronograma."
                 ],
                 answer: 0
             },
